--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">SmartGPS </string>
 
     <!-- activity_view.xml -->
-    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>>
+    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>>
 
     <!-- fragment_main.xml -->
     <string name="lblTxtDescription">Description </string>
@@ -24,11 +24,10 @@
     <string name="lblProximity">Proximity</string>
     <string name="lblLuminosity">Luminosity</string>
     <string name="lblWeather">Weather</string>
-    <string name="lblStepCounter">Step Counter</string>
+    <string name="lblStepCounter">Steps</string>
     <string name="lblBattery">Battery</string>
     <string name="lblTemperature">Temperature</string>
     <string name="lblConfidencePercentage">Confidence</string>
-    <string name="lblSound">Sound</string>
     <string name="lblTxtVerifyOk">Active Account</string>
     <string name="lblTxtVerifyNoOk">Inactive Account. Check your email to confirm the account. If you do not find it, check spam or verify that the email you entered is correct! The information will not be synchronized until you confirm your data.</string>
     <string name="act_main_no_acuracy">Not enough Accuracy</string>
@@ -51,6 +50,7 @@
 
     <!-- SplashActivity ViewActivity MainActivity-->
     <string name="msgErrorServerResponse">Ops! Something went wrong. Check your Internet connection!!</string>
+    <string name="msgEnableNetwork">Enable Internet connection</string>
 
     <!-- MainActivity -->
     <string name="msgManualSync">Wait a moment...</string>
