Corrección formato de fecha. Validación para salir de aplicación.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -61,6 +61,7 @@
     <string name="lblTxtGpsInfoLon">Longitude: </string>
     <string name="lblTxtGpsInfoLat">Latitude: </string>
     <string name="lblTxtSync">Non-synchronized data: </string>
+    <string name="lblCloseApplication">Fermer l\'application?</string>
 
     <!-- LocationService -->
     <string name="msgTittleNotification">¡Désactivé </string>
