--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -61,6 +61,7 @@
     <string name="lblTxtGpsInfoLon">Longitude: </string>
     <string name="lblTxtGpsInfoLat">Latitude: </string>
     <string name="lblTxtSync">Non-synchronized data: </string>
+    <string name="lblCloseApplication">Close the application?</string>
 
     <!-- LocationService -->
     <string name="msgTittleNotification">¡Disabled </string>
